Add 'index' and 'login' pages and styles

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,1 +1,4 @@
-@import 'layout/site-header';
+@import 'config/imports';
+@import 'layout/imports';
+@import 'components/imports';
+@import 'pages/imports';
