--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Електронний кампус НТУУ КПІ</title>
-</head>
-<body>
+{% extends "shared/layout.html" %}
 
-</body>
-</html>
+{% block main %}
+<main class="index-main">
+   <div class="container">
+      <img class="logo" src="./public/images/logo-big.png" alt="">
+
+      <h1 class="title">Система знаходиться у стадії розробки</h1>
+
+      <p class="description">Зараз ви можете перейти на інші ресурси: <a href="https://www.facebook.com/pages/Electronic-Campus-of-NTUU-KPI/626578197378085">сторінку кампусу у Facebook</a>, <a href="http://kbis.kpi.ua/">сайт конструкторського бюро «Інформаційних систем»</a>, <a href="https://github.com/DOIS">портал розробників електроного кампусу</a>.</p>
+   </div>
+</main>
+{% endblock %}
