--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
    <div class="container">
       <img src="./public/images/logo-big.png" alt="" class="logo">
 
-      <form class="basic-form" action="/login/auth" method="GET">
+      <form class="basic-form" action="/Login/auth" method="GET">
          <div class="input-group">
             <input class="textbox" name="Username" type="text" placeholder="Логін">
          </div>
